Update GDA Comments

--- a/GDA.ipynb
+++ b/GDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient descent ascent (GDA) is the most naive approach to addressing the challenges of 'competitive optimization' whereby multiple agents are competing to minimize their individual cost functions. With GDA, each player independently changes their strategy in the direction of the steepest descent of their cost function, ignoring any potential change in the strategy of the other players. Here we present an example of GDA in the two-agent case."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SimGD(f, g, x0, y0, n=0.2, iterations=50):\n",
+    "def GDA(f, g, x0, y0, n=0.2, iterations=50):\n",
     "    x = [x0]\n",
     "    y = [y0]\n",
     "    for i in range(iterations):\n",
@@ -31,19 +38,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a simple bilinear game with functions $f(x,y)=x^Ty$ and $g(x,y)=-f(x,y)$. Run GDA for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = lambda x, y: (x.T @ y)[0, 0]\n",
     "g = lambda x, y: -f(x, y)\n",
-    "x, y = SimGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)))"
+    "x, y = GDA(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can visualize this simple game by plotting $x$ and $y$ for each iteration of GDA. This shows the divergent behavior of GDA for some games whereby $x$ and $y$ can be seen as \"spiraling\" away from the Nash equilibrium."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
