Add CGD comments

--- a/CGD.ipynb
+++ b/CGD.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Computes the Hessian-vector product of a function $f$ on two variables with a vector $v$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 322,
    "metadata": {},
@@ -20,6 +27,13 @@
    "source": [
     "def hvp(f, x, y, v, a1, a2):\n",
     "    return grad(lambda x, y: jnp.vdot(grad(f, argnums=a1)(x, y), v), argnums=a2)(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Competitive gradient descent (CGD) is a new algorithm for competitive optimization which offers a generalization of gradient descent to the competitive setting. The algorithm pursues a game-theoretic approach where the notion of a solution is given by the Nash equilibrium where neither player can unilaterally improve their strategy."
    ]
   },
   {
@@ -55,6 +69,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a simple bilinear game with functions $f(x,y)=x^Ty$ and $g(x,y)=-f(x,y)$. Run GDA for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 324,
    "metadata": {},
@@ -62,7 +83,14 @@
    "source": [
     "f = lambda x, y: (x.T @ y)[0, 0]\n",
     "g = lambda x, y: -f(x, y)\n",
-    "x, y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=100)"
+    "x, y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can visualize this game by plotting $x$ and $y$ for each iteration of CGD. This demonstrates the convergent behavior of CGD when compared against SimGD, which spirals away from the Nash equilibrium instead of toward it."
    ]
   },
   {
