Add biliear example explanation

--- a/bilinear_game_example.ipynb
+++ b/bilinear_game_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize a simple bilinear game with functions $f(x,y)=x^Ty=-g(x,y)$. Run GDA and CGD for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +32,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract dataframe from results for plotting."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "gda_x = [i[0, 0] for i in gda_x]\n",
     "gda_y = [i[0, 0] for i in gda_y]\n",
     "cgd_x = [i[0, 0] for i in cgd_x]\n",
-    "cgd_y = [i[0, 0] for i in cgd_y]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cgd_y = [i[0, 0] for i in cgd_y]\n",
     "gda_df = pd.DataFrame(data={'x': gda_x, 'y': gda_y, 'label': 'GDA'})\n",
     "cgd_df = pd.DataFrame(data={'x': cgd_x, 'y': cgd_y, 'label': 'CGD'})\n",
     "df = pd.concat([gda_df, cgd_df])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot $x$ and $y$ together for GDA and CGD. Let color indicate the method and let opacity indicate the recency of the result (i.e., newer data is darker). Fix the scaling for a 1:1 ratio on $x$:$y$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
