--- a/CGD.ipynb
+++ b/CGD.ipynb
@@ -9,14 +9,14 @@
     "from jax import grad, jacfwd, jacrev, jit\n",
     "import jax.numpy as jnp\n",
     "from jax.scipy.sparse.linalg import cg, bicgstab\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Computes the Hessian-vector product of a function $f$ on two variables with a vector $v$."
+    "Computes the Hessian-vector product of a function $f$ on two variables with a vector $v$.\n"
    ]
   },
   {
@@ -26,14 +26,14 @@
    "outputs": [],
    "source": [
     "def hvp(f, x, y, v, a1, a2):\n",
-    "    return grad(lambda x, y: jnp.vdot(grad(f, argnums=a1)(x, y), v), argnums=a2)(x, y)"
+    "    return grad(lambda x, y: jnp.vdot(grad(f, argnums=a1)(x, y), v), argnums=a2)(x, y)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Competitive gradient descent (CGD) is a new algorithm for competitive optimization which offers a generalization of gradient descent to the competitive setting. The algorithm pursues a game-theoretic approach where the notion of a solution is given by the Nash equilibrium where neither player can unilaterally improve their strategy."
+    "Competitive gradient descent (CGD) is a new algorithm for competitive optimization which offers a generalization of gradient descent to the competitive setting. The algorithm pursues a game-theoretic approach where the notion of a solution is given by the Nash equilibrium where neither player can unilaterally improve their strategy.\n"
    ]
   },
   {
@@ -52,11 +52,13 @@
     "        ly = y[-1]\n",
     "\n",
     "        rhs_x = dfdx(lx, ly) - n * hvp(f, lx, ly, dgdy(lx, ly), 1, 0)\n",
+    "\n",
     "        def lhs_x(v):\n",
     "            return v - n ** 2 * hvp(f, lx, ly, hvp(g, lx, ly, v, 0, 1), 1, 0)\n",
     "        sol_x = cg(lhs_x, rhs_x)[0]\n",
     "\n",
     "        rhs_y = dgdy(lx, ly) - n * hvp(g, lx, ly, dfdx(lx, ly), 0, 1)\n",
+    "\n",
     "        def lhs_y(v):\n",
     "            return v - n ** 2 * hvp(g, lx, ly, hvp(f, lx, ly, v, 1, 0), 0, 1)\n",
     "        sol_y = cg(lhs_y, rhs_y)[0]\n",
@@ -65,14 +67,14 @@
     "        ny = ly - n * sol_y\n",
     "        x.append(nx)\n",
     "        y.append(ny)\n",
-    "    return x, y"
+    "    return x, y\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a simple bilinear game with functions $f(x,y)=x^Ty$ and $g(x,y)=-f(x,y)$. Run GDA for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1."
+    "Define a simple bilinear game with functions $f(x,y)=x^Ty$ and $g(x,y)=-f(x,y)$. Run GDA for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1.\n"
    ]
   },
   {
@@ -81,16 +83,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = lambda x, y: (x.T @ y)[0, 0]\n",
-    "g = lambda x, y: -f(x, y)\n",
-    "x, y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)"
+    "def f(x, y): return (x.T @ y)[0, 0]\n",
+    "def g(x, y): return -f(x, y)\n",
+    "\n",
+    "\n",
+    "x, y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can visualize this game by plotting $x$ and $y$ for each iteration of CGD. This demonstrates the convergent behavior of CGD when compared against SimGD, which spirals away from the Nash equilibrium instead of toward it."
+    "We can visualize this game by plotting $x$ and $y$ for each iteration of CGD. This demonstrates the convergent behavior of CGD when compared against SimGD, which spirals away from the Nash equilibrium instead of toward it.\n"
    ]
   },
   {
@@ -1182,10 +1186,10 @@
    "source": [
     "fig = px.scatter(x=[i[0, 0] for i in x], y=[i[0, 0] for i in y])\n",
     "fig.update_yaxes(\n",
-    "    scaleanchor = \"x\",\n",
-    "    scaleratio = 1,\n",
+    "    scaleanchor=\"x\",\n",
+    "    scaleratio=1,\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   }
  ],
