--- a/bilinear_game_example.ipynb
+++ b/bilinear_game_example.ipynb
@@ -9,14 +9,14 @@
     "from optimizers import GDA, CGD\n",
     "import jax.numpy as jnp\n",
     "import plotly.express as px\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize a simple bilinear game with functions $f(x,y)=x^Ty=-g(x,y)$. Run GDA and CGD for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1."
+    "Initialize a simple bilinear game with functions $f(x,y)=x^Ty=-g(x,y)$. Run GDA and CGD for 50 iterations using $\\eta=0.2$ with $x$ and $y$ starting as column vectors consisting of a single 1.\n"
    ]
   },
   {
@@ -25,17 +25,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = lambda x, y: (x.T @ y)[0, 0]\n",
-    "g = lambda x, y: -f(x, y)\n",
+    "def f(x, y): return (x.T @ y)[0, 0]\n",
+    "def g(x, y): return -f(x, y)\n",
+    "\n",
+    "\n",
     "gda_x, gda_y = GDA(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)\n",
-    "cgd_x, cgd_y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)"
+    "cgd_x, cgd_y = CGD(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)), iterations=50)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract dataframe from results for plotting."
+    "Extract dataframe from results for plotting.\n"
    ]
   },
   {
@@ -50,14 +52,14 @@
     "cgd_y = [i[0, 0] for i in cgd_y]\n",
     "gda_df = pd.DataFrame(data={'x': gda_x, 'y': gda_y, 'label': 'GDA'})\n",
     "cgd_df = pd.DataFrame(data={'x': cgd_x, 'y': cgd_y, 'label': 'CGD'})\n",
-    "df = pd.concat([gda_df, cgd_df])"
+    "df = pd.concat([gda_df, cgd_df])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot $x$ and $y$ together for GDA and CGD. Let color indicate the method and let opacity indicate the recency of the result (i.e., newer data is darker). Fix the scaling for a 1:1 ratio on $x$:$y$."
+    "Plot $x$ and $y$ together for GDA and CGD. Let color indicate the method and let opacity indicate the recency of the result (i.e., newer data is darker). Fix the scaling for a 1:1 ratio on $x$:$y$.\n"
    ]
   },
   {
@@ -1379,14 +1381,17 @@
     }
    ],
    "source": [
-    "fig = px.scatter(df, x=df.x, y=df.y, color=df.label, \n",
-    "opacity=df.index/50,\n",
-    "title='Comparison of GDA and CGD for a simple bilinear game')\n",
+    "fig = px.scatter(df,\n",
+    "                 x=df.x,\n",
+    "                 y=df.y,\n",
+    "                 color=df.label,\n",
+    "                 opacity=df.index/50,\n",
+    "                 title='Comparison of GDA and CGD for a simple bilinear game')\n",
     "fig.update_yaxes(\n",
-    "    scaleanchor = \"x\",\n",
-    "    scaleratio = 1,\n",
+    "    scaleanchor=\"x\",\n",
+    "    scaleratio=1,\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   }
  ],
