--- a/GDA.ipynb
+++ b/GDA.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from jax import grad\n",
     "import jax.numpy as jnp\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n"
    ]
   },
   {
@@ -50,9 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = lambda x, y: (x.T @ y)[0, 0]\n",
-    "g = lambda x, y: -f(x, y)\n",
-    "x, y = GDA(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)))"
+    "def f(x, y): return (x.T @ y)[0, 0]\n",
+    "def g(x, y): return -f(x, y)\n",
+    "\n",
+    "\n",
+    "x, y = GDA(f, g, jnp.ones((1, 1)), jnp.ones((1, 1)))\n"
    ]
   },
   {
